; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mscoree/extr_mscoree_main.c_WtoA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mscoree/extr_mscoree_main.c_WtoA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_UTF8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @WtoA(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @CP_UTF8, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @WideCharToMultiByte(i32 %5, i32 0, i32 %6, i32 -1, i8* null, i32 0, i32* null, i32* null)
  store i32 %7, i32* %3, align 4
  %8 = call i32 (...) @GetProcessHeap()
  %9 = load i32, i32* %3, align 4
  %10 = call i8* @HeapAlloc(i32 %8, i32 0, i32 %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %1
  %14 = load i32, i32* @CP_UTF8, align 4
  %15 = load i32, i32* %2, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @WideCharToMultiByte(i32 %14, i32 0, i32 %15, i32 -1, i8* %16, i32 %17, i32* null, i32* null)
  br label %19

19:                                               ; preds = %13, %1
  %20 = load i8*, i8** %4, align 8
  ret i8* %20
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32, i32, i8*, i32, i32*, i32*) #1

declare dso_local i8* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
